Update pagination to avoid user jumping pages out of server cache

--- a/src/assets/css/components/table.css
+++ b/src/assets/css/components/table.css
@@ -48,11 +48,6 @@
   font-weight: 500;
 }
 
-.table-custom .n-data-table__pagination {
-  justify-content: flex-start;
-}
-
-
 /* MediaQuery */
 
 @media (max-width: 800px) {
@@ -85,4 +80,14 @@
   border-right: 1px solid #d1d1d1;
   border-bottom: 1px solid #d1d1d1;
   border-top: 1px solid #d1d1d1;
+}
+
+/* Custom pagination */
+
+.n-input.n-input--resizable.n-input--stateful {
+  pointer-events: none;
+}
+
+.n-pagination.n-pagination--simple .n-input.n-input--resizable.n-input--stateful {
+  --n-border: none !important;
 }
